Audio Update : Refactor Audio instance to ResourceManager